php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42917 PDO::FETCH_KEY_PAIR doesn't work with setFetchMode
Submitted: 2007-10-10 13:34 UTC Modified: 2007-10-11 20:58 UTC
From: remi dot lanvin at bsocom dot com Assigned: iliaa (profile)
Status: Closed Package: PDO related
PHP Version: 5.2.4 OS: Linux 2.6.17.8
Private report: No CVE-ID: None
 [2007-10-10 13:34 UTC] remi dot lanvin at bsocom dot com
Description:
------------
Using PDO::FETCH_KEY_PAIR as an argument to PDOStatement->setFetchMode() cause an error.

Note : PDO::FETCH_KEY_PAIR works well when used directly as an argument to fetchAll() without setFetchMode().

Reproduce code:
---------------
$dbh = new PDO($dsn, $login, $password);
$sql = 'SELECT id, login FROM user u';
$results = $dbh->query($sql);
$results->setFetchMode(PDO::FETCH_KEY_PAIR);
print_r($results->fetchAll());

Expected result:
----------------
An associative array ('id' => 'login')

Actual result:
--------------
SQLSTATE[22003]: Numeric value out of range: Invalid fetch mode specified

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-10-11 20:58 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 17 03:00:01 2026 UTC