Fixed bug #42917 (PDO::FETCH_KEY_PAIR doesn't work with setFetchMode)